--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,6 +12,25 @@
   </head>
 
   <body>
-    <h1>Hello World!</h1>
+    <form class="" action="index.html" method="post">
+        <div class="">
+            <input type="text" name="title" value="" placeholder="title">
+            <input type="email" name="email" value="" placeholder="email">
+        </div>
+        <!-- options -->
+        <div class="">
+            <input type="text" name="option" value="" placeholder="option">
+            <input type="text" name="description" value="" placeholder="description">
+        </div>
+        <div class="">
+            <input type="text" name="option" value="" placeholder="option">
+            <input type="text" name="description" value="" placeholder="description">
+        </div>
+        <div class="">
+            <input type="text" name="option" value="" placeholder="option">
+            <input type="text" name="description" value="" placeholder="description">
+        </div>
+        <input type="submit" name="submit" value="Submit">
+    </form>
   </body>
 </html>
