--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,35 +2,35 @@
 <html lang="en">
   <head>
     <title>Home Page</title>
-
-    <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css" />
-    <link rel="stylesheet" href="/vendor/border-box.css" type="text/css" />
-    <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
-
-    <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
-    <script type="text/javascript" src="/scripts/app.js"></script>
+    <% include ./partials/head.ejs %>
   </head>
 
   <body>
-    <form class="" action="index.html" method="post">
-        <div class="">
-            <input type="text" name="title" value="" placeholder="title">
-            <input type="email" name="email" value="" placeholder="email">
-        </div>
-        <!-- options -->
-        <div class="">
-            <input type="text" name="option" value="" placeholder="option">
-            <input type="text" name="description" value="" placeholder="description">
-        </div>
-        <div class="">
-            <input type="text" name="option" value="" placeholder="option">
-            <input type="text" name="description" value="" placeholder="description">
-        </div>
-        <div class="">
-            <input type="text" name="option" value="" placeholder="option">
-            <input type="text" name="description" value="" placeholder="description">
-        </div>
-        <input type="submit" name="submit" value="Submit">
-    </form>
+
+  <% include ./partials/header.ejs %>
+
+  <form class="" action="index.html" method="post">
+    <div class="">
+      <input type="text" name="title" value="" placeholder="title">
+      <input type="email" name="email" value="" placeholder="email">
+    </div>
+    <!-- options -->
+    <div class="">
+      <input type="text" name="option" value="" placeholder="option">
+      <input type="text" name="description" value="" placeholder="description">
+    </div>
+    <div class="">
+      <input type="text" name="option" value="" placeholder="option">
+      <input type="text" name="description" value="" placeholder="description">
+    </div>
+    <div class="">
+      <input type="text" name="option" value="" placeholder="option">
+      <input type="text" name="description" value="" placeholder="description">
+    </div>
+    <input type="submit" name="submit" value="Submit">
+  </form>
+
+  <% include ./partials/footer.ejs %>
+
   </body>
 </html>
