--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,3 +1,5 @@
+<meta charset="utf-8">
+
 <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css" />
 <link rel="stylesheet" href="/vendor/border-box.css" type="text/css" />
 <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
