--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,3 +1,8 @@
-<nav>
-  <h1>Decision Maker</h1>
+<nav class="navbar navbar-fixed-top navbar-default navbar-left">
+  <div class="container-fluid">
+    <div class="navbar-brand">
+      <span class="glyphicon glyphicon-th-list"></span>
+      <a href="#">Decision Maker</a>
+    </div>
+</div>
 </nav>
