Clicking the brand links to main page

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,8 +1,6 @@
-<nav class="navbar navbar-fixed-top navbar-default navbar-left">
-  <div class="container-fluid">
-    <div class="navbar-brand">
-      <span class="glyphicon glyphicon-th-list"></span>
-      <a href="#">Decision Maker</a>
-    </div>
-</div>
+<nav class="navbar navbar-fixed-top navbar-default">
+  <div class="navbar-brand">
+    <span class="glyphicon glyphicon-th-list"></span>
+    <a href="/">Decision Maker</a>
+  </div>
 </nav>
