Clicking the brand links to main page

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,6 +1,8 @@
 <nav class="navbar navbar-fixed-top navbar-default">
   <div class="navbar-brand">
-    <span class="glyphicon glyphicon-th-list"></span>
-    <a href="/">Decision Maker</a>
+    <a href="/">
+      <span class="glyphicon glyphicon-th-list"></span>
+      Decision Maker
+    </a>
   </div>
 </nav>
