we can now pull info from the post / form and input it into the database

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,7 +16,7 @@
 
       <div class="panel panel-default">
         <div class="panel-body">
-          <form class="form" action="index.html" method="post">
+          <form class="form" action="/" method="post">
 
             <div class="input-group">
               <label for="poll-title">Poll Title</label>
