Added alert-danger div

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -47,6 +47,10 @@
             </div>
 
           </form>
+
+          <div class="alert alert-danger">
+            <!-- alerts go here -->
+          </div>
         </div>
       </div>
     </div>
