--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -7,6 +7,7 @@
 
 <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
 <script type="text/javascript" src="/scripts/app.js"></script>
+<script type="text/javascript" src="/scripts/alert-slider.js"></script>
 
 <!-- Bootstrap -->
 <!-- Latest compiled and minified CSS -->
