Added classes for add-option.js

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -29,20 +29,20 @@
             <!-- options -->
             <div class="input-group">
               <label for="">Option 1</label>
-              <input class="form-control" type="text" name="option" value="" placeholder="option">
-              <input class="form-control" type="text" name="description" value="" placeholder="description">
+              <input class="option form-control" type="text" name="option" value="" placeholder="option">
+              <input class="option form-control" type="text" name="description" value="" placeholder="description">
             </div>
             <div class="input-group">
               <label for="">Option 2</label>
-              <input class="form-control" type="text" name="option" value="" placeholder="option">
-              <input class="form-control" type="text" name="description" value="" placeholder="description">
+              <input class="option form-control" type="text" name="option" value="" placeholder="option">
+              <input class="option form-control" type="text" name="description" value="" placeholder="description">
             </div>
             <div class="input-group">
               <label for="">Option 3</label>
-              <input class="form-control" type="text" name="option" value="" placeholder="option">
-              <input class="form-control" type="text" name="description" value="" placeholder="description">
+              <input class="option form-control" type="text" name="option" value="" placeholder="option">
+              <input class="option form-control" type="text" name="description" value="" placeholder="description">
             </div>
-            <div class="input-group">
+            <div class="button input-group">
               <input class="btn btn-primary" type="submit" name="submit" value="Submit">
             </div>
 
