commiting option tests

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -27,7 +27,7 @@
               <input id="poll-email" class="form-control" type="email" name="email" value="" placeholder="email">
             </div>
             <!-- options -->
-            <div class="input-group">
+            <div class="input-group" data-option="1">
               <label for="">Option 1</label>
               <input class="form-control" type="text" name="option" value="" placeholder="option">
               <input class="form-control" type="text" name="description" value="" placeholder="description">
