--- a/views/index.ejs
+++ b/views/index.ejs
@@ -27,30 +27,26 @@
               <input id="poll-email" class="form-control" type="email" name="email" value="" placeholder="email">
             </div>
             <!-- options -->
-            <div class="input-group" data-option="1">
+            <div class="input-group">
               <label for="">Option 1</label>
-              <input class="option form-control" type="text" name="option" value="" placeholder="option">
-              <input class="option form-control" type="text" name="description" value="" placeholder="description">
+              <input class="form-control" type="text" name="option" value="" placeholder="option">
+              <input class="form-control" type="text" name="description" value="" placeholder="description">
             </div>
             <div class="input-group">
               <label for="">Option 2</label>
-              <input class="option form-control" type="text" name="option" value="" placeholder="option">
-              <input class="option form-control" type="text" name="description" value="" placeholder="description">
+              <input class="form-control" type="text" name="option" value="" placeholder="option">
+              <input class="form-control" type="text" name="description" value="" placeholder="description">
             </div>
             <div class="input-group">
               <label for="">Option 3</label>
-              <input class="option form-control" type="text" name="option" value="" placeholder="option">
-              <input class="option form-control" type="text" name="description" value="" placeholder="description">
+              <input class="form-control" type="text" name="option" value="" placeholder="option">
+              <input class="form-control" type="text" name="description" value="" placeholder="description">
             </div>
-            <div class="button input-group">
+            <div class="input-group">
               <input class="btn btn-primary" type="submit" name="submit" value="Submit">
             </div>
 
           </form>
-
-          <div class="alert alert-danger">
-            <!-- alerts go here -->
-          </div>
         </div>
       </div>
     </div>
