Changed classes for add-option.js

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,31 +18,27 @@
         <div class="panel-body">
           <form class="form" action="index.html" method="post">
 
-            <div class="input-group">
+            <div class="">
               <label for="poll-title">Poll Title</label>
               <input id="poll-title" class="form-control" type="text" name="title" value="" placeholder="title">
             </div>
-            <div class="input-group">
+            <div class="">
               <label for="poll-email">Email</label>
               <input id="poll-email" class="form-control" type="email" name="email" value="" placeholder="email">
             </div>
-            <!-- options -->
             <div class="input-group">
-              <label for="">Option 1</label>
-              <input class="option form-control" type="text" name="option" value="" placeholder="option">
-              <input class="option form-control" type="text" name="description" value="" placeholder="description">
+              <label for="">Option</label>
+              <input class="form-control option" type="text" name="option" value="" placeholder="option">
+              <input class="form-control" type="text" name="description" value="" placeholder="description">
             </div>
             <div class="input-group">
-              <label for="">Option 2</label>
-              <input class="option form-control" type="text" name="option" value="" placeholder="option">
-              <input class="option form-control" type="text" name="description" value="" placeholder="description">
+              <label for="">Option</label>
+              <input class="form-control option" type="text" name="option" value="" placeholder="option">
+              <input class="form-control" type="text" name="description" value="" placeholder="description">
             </div>
-            <div class="input-group">
-              <label for="">Option 3</label>
-              <input class="option form-control" type="text" name="option" value="" placeholder="option">
-              <input class="option form-control" type="text" name="description" value="" placeholder="description">
-            </div>
-            <div class="button input-group">
+            <!-- more options appear here -->
+
+            <div class="button">
               <input class="btn btn-primary" type="submit" name="submit" value="Submit">
             </div>
 
