--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -5,6 +5,9 @@
 <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
 <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
 
+<!-- Dragula -->
+<link rel="stylesheet" href="https://rawgit.com/bevacqua/dragula/master/dist/dragula.css" type="text/css" />
+
 <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
 <script type="text/javascript" src="/scripts/app.js"></script>
 <script type="text/javascript" src="/scripts/alert-slider.js"></script>
