added poll title and email in ejs

--- a/views/poll.ejs
+++ b/views/poll.ejs
@@ -9,8 +9,8 @@
 
     <div class="container">
       <div class="jumbotron">
-        <h2>Title</h2>
-        <p>created by email@email.com</p>
+        <h2><%= pollTitle %></h2>
+        <p>created by <%= pollEmail %></p>
       </div>
 
       <div class="panel panel-default">
