--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -10,7 +10,7 @@
 
 <script type="text/javascript" src="/vendor/jquery-3.0.0.js"></script>
 <script type="text/javascript" src="/scripts/app.js"></script>
-<script type="text/javascript" src="/scripts/alert-slider.js"></script>
+<script type="text/javascript" src="/scripts/form-button.js"></script>
 <script type="text/javascript" src="/scripts/add-option.js"></script>
 
 <!-- Bootstrap -->
