added classes to work with thankyou jquery

--- a/views/poll.ejs
+++ b/views/poll.ejs
@@ -3,6 +3,7 @@
   <head>
     <title>Poll</title>
     <% include ./partials/head.ejs %>
+
   </head>
   <body>
     <% include ./partials/header.ejs %>
@@ -15,8 +16,8 @@
       </div>
 
       <div class="panel panel-default">
-        <div class="panel-body">
-          <form class="form" action="poll.html" method="post">
+        <div class="panel-body form-cont">
+          <form class="form results-form" action="poll.html" method="post">
 
             <div class="options">
 
@@ -30,13 +31,14 @@
               </div>
               <% } %>
             </div>
-            <input class="btn btn-primary" type="submit" name="submit" value="Submit">
+            <input id ="options-submit" class="btn btn-primary" type="submit" name="submit" value="Submit">
           </form>
         </div>
       </div>
     </div>
 
     <% include ./partials/footer.ejs %>
+    <script src="/scripts/thank-you.js"></script>
     <!-- Dragula -->
     <script src='https://rawgit.com/bevacqua/dragula/master/dist/dragula.js'></script>
     <script type="text/javascript" src="/scripts/poll-dragula.js"></script>
