The results button now takes you to the right results page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -51,7 +51,7 @@
           <div class="buttons">
             <!-- these buttons appear on form submission -->
             <button class="btn btn-primary" id="vote" type="button" name="button">Poll</button>
-            <button class="btn btn-secondary" type="button" name="button">Results</button>
+            <button class="btn btn-secondary" id="results" type="button" name="button">Results</button>
           </div>
         </div>
       </div>
