initial styling done on footer

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,6 +1,16 @@
+<footer class="footer">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-8">Team description, project description, we are in LHL bootcamp</div>
+      <div class="col-sm-4">&copy Team Awesome 2017</div>
+    </div>
+  </div>
+</footer>
+
+
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
 <script src="js/bootstrap.min.js"></script>
 
-&copy Team Awesome 2017
+
