changed classes on options

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,20 +19,20 @@
         <div class="panel-body">
           <form class="form" action="/" method="post" id="new-poll">
 
-            <div class="">
+            <div class="form-group">
               <label for="poll-title">Poll Title</label>
               <input id="poll-title" class="form-control" type="text" name="title" value="" placeholder="title">
             </div>
-            <div class="">
+            <div class="form-group">
               <label for="poll-email">Email</label>
               <input id="poll-email" class="form-control" type="email" name="email" value="" placeholder="email">
             </div>
-            <div class="input-group">
+            <div class="form-group">
               <label for="">Option</label>
               <input class="form-control option" type="text" name="option" value="" placeholder="option">
               <input class="form-control" type="text" name="description" value="" placeholder="description">
             </div>
-            <div class="input-group">
+            <div class="form-group">
               <label for="">Option</label>
               <input class="form-control option" type="text" name="option" value="" placeholder="option">
               <input class="form-control" type="text" name="description" value="" placeholder="description">
