--- a/views/index.ejs
+++ b/views/index.ejs
@@ -27,14 +27,14 @@
               <label for="poll-email">Email</label>
               <input id="poll-email" class="form-control" type="email" name="email" value="" placeholder="email">
             </div>
-            <div class="form-group">
-              <label for="">Option</label>
-              <input class="form-control option" type="text" name="option" value="" placeholder="option">
+            <div class="form-group input-group">
+              <label for="option-1">Option 1</label>
+              <input id="option-1" class="form-control option" type="text" name="option-1" value="" placeholder="Enter poll option">
               <input class="form-control" type="text" name="description" value="" placeholder="description">
             </div>
-            <div class="form-group">
-              <label for="">Option</label>
-              <input class="form-control option" type="text" name="option" value="" placeholder="option">
+            <div class="form-group input-group">
+              <label for="option-2">Option 2</label>
+              <input id="option-2" class="form-control option" type="text" name="option-2" value="" placeholder="Enter poll option">
               <input class="form-control" type="text" name="description" value="" placeholder="description">
             </div>
             <!-- more options appear here -->
