--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,7 +17,7 @@
 
       <div class="panel panel-default">
         <div class="panel-body">
-          <form class="form" action="/" method="post" id="new-poll">
+          <form class="form create-poll" action="/" method="post" id="new-poll">
 
             <div class="form-group">
               <label for="poll-title">Poll Title</label>
