--- a/views/poll.ejs
+++ b/views/poll.ejs
@@ -38,7 +38,7 @@
     </div>
 
     <% include ./partials/footer.ejs %>
-    <script src="/scripts/thank-you.js"></script>
+    <script src="/scripts/ratings-button.js"></script>
     <!-- Dragula -->
     <script src='https://rawgit.com/bevacqua/dragula/master/dist/dragula.js'></script>
     <script type="text/javascript" src="/scripts/poll-dragula.js"></script>
