--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <
+
   <head>
     <title>Home Page</title>
     <% include ./partials/head.ejs %>
@@ -21,21 +21,21 @@
 
             <div class="form-group">
               <label for="poll-title">Poll Title</label>
-              <input id="poll-title" class="form-control" type="text" name="title" value="" placeholder="title">
+              <input id="poll-title" class="form-control" type="text" name="title" value="" placeholder="Title">
             </div>
             <div class="form-group">
               <label for="poll-email">Email</label>
-              <input id="poll-email" class="form-control" type="email" name="email" value="" placeholder="email">
+              <input id="poll-email" class="form-control" type="email" name="email" value="" placeholder="Email">
             </div>
             <div class="form-group input-group">
               <label for="option-1">Option 1</label>
               <input id="option-1" class="form-control option" type="text" name="option-1" value="" placeholder="Enter poll option">
-              <input class="form-control" type="text" name="description" value="" placeholder="description">
+              <input class="form-control" type="text" name="description" value="" placeholder="Description">
             </div>
             <div class="form-group input-group">
               <label for="option-2">Option 2</label>
               <input id="option-2" class="form-control option" type="text" name="option-2" value="" placeholder="Enter poll option">
-              <input class="form-control" type="text" name="description" value="" placeholder="description">
+              <input class="form-control" type="text" name="description" value="" placeholder="Description">
             </div>
             <!-- more options appear here -->
 
