--- a/styles/_footer.scss
+++ b/styles/_footer.scss
@@ -1,7 +1,9 @@
 .footer {
   background: #f8f8f8;
   border-top: 1px solid #e7e7e7;
+  margin-top: 20px;
   padding-top: 15px;
   padding-bottom: 15px;
   color: #337ab7;
+  font-size: 12px;
 }
