--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -6,6 +6,37 @@ body {
   }
 }
 
+.main {
+  max-width: 850px;
+}
+.container .jumbotron {
+  margin-bottom: 0;
+  padding: 0 25px 20px;
+
+  h1 {
+    margin-bottom: 0;
+  }
+
+  h2 {
+    margin-top: 0;
+    margin-bottom: 0;
+    font-weight: normal;
+    font-size: 25px;
+  }
+}
+.panel-body {
+  padding: 20px;
+
+  h3 {
+    margin-top: 0;
+  }
+  p:last-child {
+    margin-bottom: 0;
+  }
+}
+h1 {
+  margin-top: 0;
+}
 @import '_thank-you';
 @import '_footer';
 @import '_forms';
