added class main to main container

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,7 @@
   <body>
     <% include ./partials/header.ejs %>
 
-    <div class="container">
+    <div class="container main">
       <div class="jumbotron">
         <h1>Decision Maker</h1>
         <p>Decision making made easy</p>
