--- a/views/results.ejs
+++ b/views/results.ejs
@@ -8,9 +8,9 @@
   <body>
     <% include ./partials/header.ejs %>
 
-    <div class="container">
+    <div class="container main">
       <div class="jumbotron">
-        <h2>Title</h2>
+        <h1>Title</h1>
         <p>created by email@email.com</p>
       </div>
 
