--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,8 +1,8 @@
 <footer class="footer">
   <div class="container">
     <div class="row">
-      <div class="col-sm-8">Team description, project description, we are in LHL bootcamp</div>
-      <div class="col-sm-4">&copy Team Awesome 2017</div>
+      <div class="col-sm-7">Decision Maker was an application developed by Team Awesome.  Team Awesome consists of Joh Yoshida, Catherine Hrynuik, Nicholas Vergoes Houwens and Sebastian Bethell during Lighthouse Labs WebDev bootcamp.</div>
+      <div class="col-sm-3 col-sm-offset-1">&copy Team Awesome 2017</div>
     </div>
   </div>
 </footer>
