added margin top to submission message

--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -37,6 +37,10 @@ body {
 h1 {
   margin-top: 0;
 }
+
+.submission-message {
+  margin-top: 10px;
+}
 @import '_thank-you';
 @import '_footer';
 @import '_forms';
