--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row">
       <div class="col-sm-7">Decision Maker was an application developed by Team Awesome.  Team Awesome consists of Joh Yoshida, Catherine Hrynuik, Nicholas Vergoes Houwens and Sebastian Bethell during Lighthouse Labs WebDev bootcamp.</div>
-      <div class="col-sm-3 col-sm-offset-1">&copy Team Awesome 2017</div>
+      <div class="col-sm-3 col-sm-offset-1 copyright">&copy Team Awesome 2017</div>
     </div>
   </div>
 </footer>
