--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,5 +1,7 @@
 <meta charset="utf-8">
 
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
 <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css" />
 
 <!-- Bootstrap -->
