--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -41,6 +41,17 @@ h1 {
 .submission-message {
   margin-top: 10px;
 }
+
+.buttons {
+  text-align: center;
+  .btn {
+    min-width: 100px;
+  }
+  .btn-poll {
+    margin-right: 10px;
+  }
+}
+
 @import '_thank-you';
 @import '_footer';
 @import '_forms';
