--- a/views/index.ejs
+++ b/views/index.ejs
@@ -50,7 +50,7 @@
           </div>
           <div class="buttons">
             <!-- these buttons appear on form submission -->
-            <button class="btn btn-primary" id="vote" type="button" name="button">Poll</button>
+            <button class="btn btn-primary btn-poll" id="vote" type="button" name="button">Poll</button>
             <button class="btn btn-primary" id="results" type="button" name="button">Results</button>
             <p class="submission-message">Thank you for submitting your poll.  An email will be sent to you with links to the voting page and the results page.</p>
           </div>
