--- a/views/results.ejs
+++ b/views/results.ejs
@@ -23,8 +23,8 @@
                   <h3><%= option.option_title %></h3>
                   <p><%= option.desc %></p>
                   <p>Option ID <%= option.optionId %></p>
-                  <p>Relative Rating <%= option.rating / options.length %></p>
-                  <p>Points <%= option.rating %></p>
+                  <p>Relative Rating <%=  %></p>
+                  <p>Points <%= option.totalScore / option.ratings.length %></p>
                 </div>
               </div>
             <% }); %>
