--- a/views/results.ejs
+++ b/views/results.ejs
@@ -22,7 +22,7 @@
                 <div class="panel-body">
                   <h3><%= option.option_title %></h3>
                   <p><%= option.desc %></p>
-                  <p>Option ID <%= option.optionId %></p>
+                  <!-- <p>Option ID <%= option.optionId %></p> -->
                   <p>Relative Rating <%=  %></p>
                   <p>Points <%= option.totalScore / option.ratings.length %></p>
                 </div>
