styling for top result and reordering sass files

--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -52,6 +52,8 @@ h1 {
   }
 }
 
+@import '_nav';
 @import '_thank-you';
-@import '_footer';
+@import '_results';
 @import '_forms';
+@import '_footer';
