--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -1,4 +1,4 @@
 $font-family-sans-serif: 'Open Sans', sans-serif;
-$brand-primary: #ff0099;
+$brand-primary: #477bbe;
 
 $icon-font-path: "/fonts/bootstrap/";
