added results button to take you to results page after voting

--- a/views/poll.ejs
+++ b/views/poll.ejs
@@ -24,7 +24,7 @@
 
               <% for (let option in optionsArr) { %>
               <div class="panel panel-default">
-                <div class="panel-body">
+                <div class="panel-body options-panel-body">
                   <h3><%= optionsArr[option].option_title %></h3>
                   <p><%= optionsArr[option].description %></p>
                 </div>
