--- a/views/index.ejs
+++ b/views/index.ejs
@@ -59,5 +59,7 @@
     </div>
 
     <% include ./partials/footer.ejs %>
+    <script type="text/javascript" src="/scripts/form-button.js"></script>
+    <script type="text/javascript" src="/scripts/add-option.js"></script>
   </body>
 </html>
